# codex_usage

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  SUPPORT.md  main.py  pyproject.toml
codex_usage/: __init__.py  aggregation.py  cli.py  discovery.py  pricing.py  reporting.py  settings.py
docs/: release.md
scripts/: build-macos-arm64-exe.sh  build-windows-exe.ps1  fake-codex-app-server  packaged_sync_smoke_validation.py  smoke-test-codex-registration.js  smoke-test-packaged-sync.py
tests/: packaged_sync_smoke_support.py  test_cli.py  test_cli_transitions.py  test_discovery.py  test_github_actions_workflow.py  test_packaged_sync_smoke.py  test_parser_aggregation.py  test_pricing.py  test_project_transition_detection.py  test_project_transition_evidence.py  test_project_transitions.py  test_python_source_size.py  test_report_view.py  test_reporting_html.py  test_session_cache.py  test_session_files.py  test_sync.py  test_sync_cli.py  test_sync_cli_inventory.py  test_sync_cli_project_resolution.py  test_sync_directional_preflight.py  test_sync_existing_counterpart_security.py  test_sync_format_migration.py  test_sync_format_migration_races.py  test_sync_inventory.py  test_sync_io.py  test_sync_memory_diagnostics.py  test_sync_planner.py  test_sync_planner_project_resolution.py  test_sync_project_resolution_security.py  test_sync_project_roots.py  test_sync_project_scope.py  test_sync_runner.py  test_sync_runner_bookkeeping.py  test_sync_runner_reconciliation.py  test_sync_runner_timing.py  test_sync_runner_validation.py  test_sync_scope_read_only.py  (+10 more)
(+185 files in other folders)
