[project]
name = "codex-usage"
version = "0.1.0"
description = "Local Codex session token usage analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project.scripts]
codex-usage = "codex_usage.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
